k8s/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk002-v1
  namespace: skala3-ai1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk002
      version: v1
  template:
    metadata:
      labels:
        app: sk002
        version: v1
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
        - name: sk002-container
          image: amdp-registry.skala-ai.com/skala26a-ai1/a3002:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sk002-storage
              mountPath: /data
      volumes:
        - name: sk002-storage
          persistentVolumeClaim:
            claimName: sk002-pvc
