k8s/deployment-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk002-v3
  namespace: skala3-ai1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk002
      version: v3
  template:
    metadata:
      labels:
        app: sk002
        version: v3
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
        - name: sk002-container
          image: amdp-registry.skala-ai.com/skala26a-ai1/a3002:v3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
