k8s/service-v3.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk002-v3-service
  namespace: skala3-ai1
spec:
  type: ClusterIP
  selector:
    app: sk002
    version: v3
  ports:
    - port: 8080
      targetPort: 8080
