k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sk002-service
  namespace: skala3-ai1
spec:
  selector:
    app: sk002
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
